--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy static site to S3
 on:
   push:
     branches:
-      - main  # only deploy when pushing to main
+      - main # only deploy when pushing to main
 
 jobs:
   deploy:
@@ -20,9 +20,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Sync files to S3
-        run: aws s3 sync . s3://${{ secrets.S3_BUCKET }} --delete
-    
+      - name: Sync HTML files to S3
+        run: |
+          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
+            --exclude "*" \
+            --include "*.html" \
+            --delete
+
       - name: Invalidate CloudFront Cache
         run: |
-            aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
